--- a/index.html
+++ b/index.html
@@ -385,10 +385,10 @@
                                 Script</span>
                         </div>
                         <div class="flex gap-4">
-                            <a href=" https://ayush8859.github.io/CodeEditor/"
+                            <a href=" https://ayush8859.github.io/CodeEditor/" target="_blank"
                                 class="px-4 py-2 bg-blue-400 text-white rounded-lg hover:bg-blue-600 transition-colors">View
                                 Project</a>
-                            <a href="https://github.com/Ayush8859/CodeEditor"
+                            <a href="https://github.com/Ayush8859/CodeEditor" target="_blank"
                                 class="flex items-center text-gray-600 dark:text-gray-400 hover:text-blue-400 dark:hover:text-blue-500 transition-colors">
                                 <i class="fa-brands fa-github"></i>
                                 Code
