--- a/index.html
+++ b/index.html
@@ -334,13 +334,14 @@
                 <div
                     class="bg-white dark:bg-gray-800 rounded-lg shadow-lg overflow-hidden hover:shadow-xl transition-all duration-300 transform hover:-translate-y-1">
                     <div class="h-48 relative">
-                        <img src="code editor.jpg" alt="" class="w-full h-full object-cover">
+                        <img src="portfolio.jpg" alt="" class="w-full h-full object-cover">
                         <div class="absolute inset-0 bg-black/20"></div>
                     </div>
                     <div class="p-6">
-                        <h3 class="text-xl font-bold mb-4 ">Code Editor</h3>
+                        <h3 class="text-xl font-bold mb-4 ">Personal Portfolio</h3>
                         <p class="text-gray-600 dark:text-gray-400 mb-4 h-16">
-                            A simple code editor that allows users to write code and get live output.
+                            A personal portfolio website showcasing my skills and projects as a frontend
+                            developer.
                         </p>
                         <div class="flex flex-wrap gap-2 my-6">
                             <span
@@ -352,10 +353,10 @@
                                 Script</span>
                         </div>
                         <div class="flex gap-4">
-                            <a href="#"
+                            <a href="https://ayush8859.github.io/Portfolio/"
                                 class="px-4 py-2 bg-blue-400 text-white rounded-lg hover:bg-blue-600 transition-colors">View
                                 Project</a>
-                            <a href="#"
+                            <a href="https://github.com/Ayush8859/Portfolio"
                                 class="flex items-center text-gray-600 dark:text-gray-400 hover:text-blue-400 dark:hover:text-blue-500 transition-colors">
                                 <i class="fa-brands fa-github"></i>
                                 Code
@@ -363,7 +364,7 @@
                         </div>
                     </div>
                 </div>
-                <!-- Project Card 1 -->
+                <!-- Project Card 2 -->
                 <div
                     class="bg-white dark:bg-gray-800 rounded-lg shadow-lg overflow-hidden hover:shadow-xl transition-all duration-300 transform hover:-translate-y-1">
                     <div class="h-48 relative">
