--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@
                         <span class="w-3 h-3 rounded-full bg-green-500"></span>
                     </div>
                     <div class="p-6 font-mono terminal-content">
-                        <span class="text-green-500">$</span> <span
-                            class="command-text text-gray-900 dark:text-white"></span>
+                        <span class="text-green-500">$</span>
+                        <span class="command-text text-gray-900 dark:text-white"></span>
                     </div>
                 </div>
             </div>
