--- a/index.html
+++ b/index.html
@@ -397,6 +397,39 @@
                         </div>
                     </div>
                 </div>
+                <!-- Project Card 1 -->
+                <div
+                    class="bg-white dark:bg-gray-800 rounded-lg shadow-lg overflow-hidden hover:shadow-xl transition-all duration-300 transform hover:-translate-y-1">
+                    <div class="h-48 relative">
+                        <img src="Pet.jpg" alt="" class="w-full h-full object-cover">
+                        <div class="absolute inset-0 bg-black/20"></div>
+                    </div>
+                    <div class="p-6">
+                        <h3 class="text-xl font-bold mb-4 ">Pet</h3>
+                        <p class="text-gray-600 dark:text-gray-400 mb-4 h-16">
+                            A Simple Pet Adoption Website that allows users to view and adopt pets.
+                        </p>
+                        <div class="flex flex-wrap gap-2 my-6">
+                            <span
+                                class="px-3 py-1 bg-gray-100 dark:bg-gray-800 text-gray-600 dark:text-gray-400 rounded-full text-sm">HTML5</span>
+                            <span
+                                class="px-3 py-1 bg-gray-100 dark:bg-gray-800 text-gray-600 dark:text-gray-400 rounded-full text-sm">CSS3</span>
+                            <span
+                                class="px-3 py-1 bg-gray-100 dark:bg-gray-800 text-gray-600 dark:text-gray-400 rounded-full text-sm">Java
+                                Script</span>
+                        </div>
+                        <div class="flex gap-4">
+                            <a href=" https://ayush8859.github.io/Pet/"
+                                class="px-4 py-2 bg-blue-400 text-white rounded-lg hover:bg-blue-600 transition-colors">View
+                                Project</a>
+                            <a href="https://github.com/Ayush8859/Pet"
+                                class="flex items-center text-gray-600 dark:text-gray-400 hover:text-blue-400 dark:hover:text-blue-500 transition-colors">
+                                <i class="fa-brands fa-github"></i>
+                                Code
+                            </a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
