--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         </div>
     </section>
 
-    <!-- Feature Section -->>
+    <!-- Feature Section -->
     <section id="features"
         class="py-24 bg-gray-50 dark:bg-gray-900 translate-y-4 transition-all duration-500 opacity-0">
         <div class="container mx-auto px-4">
