--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
 
     <!-- Skills Section -->
     <section id="skills" class="py-24 bg-gray-50 dark:bg-gray-900 translate-y-4 transition-all duration-500 opacity-0">
-        <div class="container mx-auto px-4">
+        <div class="container px-4">
             <h2 class="text-3xl md:text-4xl font-bold text-center mb-4">My Skills</h2>
             <p class="text-xl text-gray-600 dark:text-gray-400 text-center mb-16">Technologies and tools I use to bring
                 projects</p>
